<resources>
    <string name="app_name">Java Tutor App</string>
    <string name="nav_home">Home</string>
    <string name="nav_questions">Questions</string>
    <string name="nav_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="basic">Java Basics</string>
    <string name="advance">Java Advanced Concepts</string>
    <string name="ordinary">Start Learning the Basics of Java Programming</string>
    <string name="advanced">Learn Advance concepts of Java Programming</string>
    <string name="exit">Exit App</string>
    <string name="Help">Help</string>
    <string name="contact">Contact Admin</string>
    <string name="policy">Terms of Service</string>
    <string name="basic_1">Java – Basic Syntax</string>
    <string name="basic_2">Java – Variable types</string>
    <string name="basic_3">Java – Basic Data types</string>
    <string name="basic_4">Java –  Numbers</string>
    <string name="basic_5">Java – Characters</string>
    <string name="basic_6">Java – Strings</string>
    <string name="basic_7">Java – Arrays</string>
    <string name="basic_8">Java – Objects and Classes</string>
    <string name="basic_9">Java – Constructors</string>
    <string name="basic_10">Java – Modifier types</string>
    <string name="basic_11">Java – Loop Control (if, if…else, else..if, etc.,)</string>
    <string name="basic_12">Java – Decision Making</string>
    <string name="basic_13">Java – Date and Time</string>
    <string name="basic_14">Java – Regular Expressions</string>
    <string name="basic_15">Go To  Java Advanced Tutorials</string>
    <string name="advanced_1">Java – Methods</string>
    <string name="advanced_2">Java – Files and I/O</string>
    <string name="advanced_3">Java – Exceptions</string>
    <string name="advanced_4">Java –  Inner class</string>
    <string name="advanced_5">Java – Inheritance</string>
    <string name="advanced_6">Java – Polymorphism</string>
    <string name="advanced_7">Java – Abstraction</string>
    <string name="advanced_8">Java – Encapsulation</string>
    <string name="advanced_9">Java – Overriding</string>
    <string name="advanced_10">Java – Interfaces</string>
    <string name="score_0">Score : 0</string>
    <string name="questions_1_x">Questions: 1/x</string>
    <string name="_00_30">00:30</string>
    <string name="option_1">Option 1</string>
    <string name="confirm">Confirm</string>
    <string name="advanced_11">Java – Packages</string>
    <string name="score">Score : 0</string>
    <string name="level">Level : </string>
    <string name="scoreresult">Score : </string>
    <string name="zero"> 0 </string>
    <string name="change">Change Subject </string>
    <string name="grade">Grade : </string>
    <string name="passed">Passed</string>
    <string name="naming_subject">Subject Name : </string>
    <string name="questionaire">Dummy question ?</string>
    <string name="timeLabel">Time Left : </string>
    <string name="question">Question : 1/x</string>
    <string name="time">30 sec</string>
    <string name="btn">Confrim</string>
    <string name="snackbar">Now Playing Song in background</string>
    <string name="turnOff">TurnOff</string>
    <string name="background">Background Music has been Switched Off</string>
    <string name="advanced_12">Java – Data Structures</string>
    <string name="advanced_13">Java – Networking</string>
    <string name="advanced_14">Java – Sending Emails</string>
    <string name="java_basics">Java Basics</string>
    <string name="java_advanced">Java Advanced</string>
    <string name="sample_programs">Sample Programs</string>
    <string name="see_sample_programs">See Sample Programs and  \n learn from them</string>
    <string name="tutorials">Questions</string>
    <string name="see_learn_tutorials_in_java_programming_both_basic_and_advanced_concepts">  \n  Learn from tutorials in Java \n programming</string>
    <string name="get_help_on_how_to_use_this_app_and_other_issues">Get Help on how to use \n this App and other issues</string>
    <string name="variables_1">A variable provides us with named storage that our programs can manipulate. Each variable in Java has a specific type, which determines the size and layout of the variable\'s memory; the range of values that can be stored within that memory; and the set of operations that can be applied to the variable. You must declare all variables before they can be used. \n\n Following is the basic form of a variable declaration − \n\n <b>Example \n</b></string>
    <string name="variable_2">data type variable [ = value][, variable [ = value] ...] ;</string>
    <string name="variable_3">Here data type is one of Java\'s datatypes and variable is the name of the variable. To declare more than one variable of the specified type, you can use a comma-separated list. Following are valid examples of variable declaration and initialization in Java −</string>
    <string name="variable_4">int a, b, c;         // Declares three ints, a, b, and c.\n
int a = 10, b = 10;  // Example of initialization\n
byte B = 22;         // initializes a byte type variable B.\n
double pi = 3.14159; // declares and assigns a value of PI.\n
char a = \'a\';        // the char variable a iis initialized with value \'a\'\n</string>
    <string name="variable_5">This chapter will explain various variable types available in Java Language. There are three kinds of variables in Java −  \n\n -Local variables\n - Instance variables\n - Class/Static variables</string>
    <string name="variable_6">Local Variables</string>
    <string name="variable_7"> \n - Local variables are declared in methods, constructors, or blocks. \n\n - Local variables are created when the method, constructor or block is entered and the variable will be destroyed once it exits the method, constructor, or block. \n\n - Access modifiers cannot be used for local variables.\n\n -  Local variables are visible only within the declared method, constructor, or block. Local variables are implemented at stack level internally.\n\n -  There is no default value for local variables, so local variables should be declared and an initial value should be assigned before the first use.\n\n <b> Example</b> \n\n
Here, age is a local variable. This is defined inside pupAge() method and its scope is limited to only this method. \n</string>
    <string name="variable_8">public class Test {\n
   \tpublic void pupAge() {\n
      \tint age = 0;\n
     \t age = age + 7;\n
      \t System.out.println("Puppy age is : " + age);\n
   \t}\n\n

  \t public static void main(String args[]) {\n
     \t Test test = new Test();\n
      \ttest.pupAge();\n
   }
}</string>
    <string name="variable_9">This will produce the following result − \n <b>Output</b>\n</string>
    <string name="variable_10">Puppy age is: 7</string>
    <string name="variable_11">Instance Variables</string>
    <string name="variable_12">\n - Instance variables are declared in a class, but outside a method, constructor or any block. When a space is allocated for an object in the heap, a slot for each instance variable value is created. \n - Instance variables are created when an object is created with the use of the keyword \'new\' and destroyed when the object is destroyed. \n - Instance variables hold values that must be referenced by more than one method, constructor or block, or essential parts of an object\'s state that must be present throughout the class. \n - Instance variables can be declared in class level before or after use. \n - Access modifiers can be given for instance variables.\n - The instance variables are visible for all methods, constructors and block in the class.\n - Normally, it is recommended to make these variables private (access level). However, visibility for subclasses can be given for these variables with the use of access modifiers. \n - Instance variables have default values. For numbers, the default value is 0, for Booleans it is false, and for object references it is null. \n -  Values can be assigned during the declaration or within the constructor. \n - Instance variables can be accessed directly by calling the variable name inside the class. However, within static methods (when instance variables are given accessibility), they should be called using the fully qualified name. ObjectReference.VariableName.\n\
    \n <b>Example</b> \n</string>
    <string name="variable_13">\nimport java.io.*;\n
\tpublic class Employee {\n

   \t// this instance variable is visible for any child class.\n
   public String name;\n

   \t// salary  variable is visible in Employee class only.\n
   private double salary;\n

   \t// The name variable is assigned in the constructor.\n
   public Employee (String empName) {\n
      \tname = empName;\n
   }

  \t // The salary variable is assigned a value.\n
   public void setSalary(double empSal) {\n
      \tsalary = empSal;\n
   }

   \t// This method prints the employee details.\n
   \tpublic void printEmp() {\n
      \tSystem.out.println("name  : " + name );\n
      \tSystem.out.println("salary :" + salary);\n
   }

   \tpublic static void main(String args[]) {\n
      \tEmployee empOne = new Employee("Ransika");\n
      \tempOne.setSalary(1000);\n
      \tempOne.printEmp();\n
   }
}</string>
    <string name="variable_14">This will produce the following result − \n\n <b>Output</b> \n</string>
    <string name="variable_15">name  : Ransika\n
salary :1000.0\n</string>
    <string name="variable_16">Class/Static Variables</string>
    <string name="variable_17">\n - Class variables also known as static variables are declared with the static keyword in a class, but outside a method, constructor or a block.

\n - There would only be one copy of each class variable per class, regardless of how many objects are created from it.

\n - Static variables are rarely used other than being declared as constants. Constants are variables that are declared as public/private, final, and static. Constant variables never change from their initial value.

\n - Static variables are stored in the static memory. It is rare to use static variables other than declared final and used as either public or private constants.

\n - Static variables are created when the program starts and destroyed when the program stops.

\n - Visibility is similar to instance variables. However, most static variables are declared public since they must be available for users of the class.

\n - Default values are same as instance variables. For numbers, the default value is 0; for Booleans, it is false; and for object references, it is null. Values can be assigned during the declaration or within the constructor. Additionally, values can be assigned in special static initializer blocks.

\n - Static variables can be accessed by calling with the class name ClassName.VariableName.

\n - When declaring class variables as public static final, then variable names (constants) are all in upper case. If the static variables are not public and final, the naming syntax is the same as instance and local variables.</string>
    <string name="variable_18">import java.io.*;\n
\t public class Employee {\n

   // salary  variable is a private static variable\n
   \tprivate static double salary;\n

   // DEPARTMENT is a constant\n
   \tpublic static final String DEPARTMENT = "Development ";\n

   \tpublic static void main(String args[]) {\n
      \tsalary = 1000;\n
      \tSystem.out.println(DEPARTMENT + "average salary:" + salary);\n
   }
}</string>
    <string name="variable_19">This will produce the following result − \n\n  <b>Output</b> \n\n</string>
    <string name="variable_20">Development average salary:1000\\n</string>
    <string name="variable_22"><b>Note</b> − If the variables are accessed from an outside class, the constant should be accessed as Employee.DEPARTMENT\n\n</string>
</resources>