<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="50dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorWhiteTransparent"
    tools:context=".VariablesFragment">

    <LinearLayout
        android:id="@+id/intro_title"
        android:padding="10dp"

        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/white">
            <TextView
                android:text="3.1 Variable Types"
                android:layout_gravity="center"
                android:textStyle="bold"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                android:textColor="@color/colorAccent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </android.support.v7.widget.CardView>


    </LinearLayout>
    <LinearLayout
        android:padding="10dp"
        android:layout_marginTop="10dp"
        android:id="@+id/intro_body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/intro_title"
        android:layout_above="@+id/nav_tutorial"
        android:orientation="vertical">
        <android.support.v4.widget.NestedScrollView
            android:id="@+id/intro_scroll"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:id="@+id/text_1"
                            android:paddingLeft="8dp"

                            android:paddingTop="8dp"
                            android:gravity="left"

                            android:text="@string/variables_1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"

                            android:fontFamily="sans-serif"
                            android:textSize="20sp"
                            android:textColor="@color/black"/>



                        <TextView
                            android:id="@+id/text_2"
                            android:gravity="center"
                            android:layout_marginTop="10dp"
                            android:fontFamily="sans-serif"
                            android:textSize="20sp"
                            android:background="@color/dim_gray"
                            android:textColor="@color/black"

                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textStyle="bold"
                            android:layout_below="@+id/text_1"

                            android:text="@string/variable_2"/>

                        <TextView
                            android:id="@+id/text_3"
                            android:gravity="left"
                            android:layout_marginTop="7dp"
                            android:paddingLeft="8dp"
                            android:fontFamily="sans-serif"
                            android:textSize="20sp"
                            android:textColor="@color/black"

                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"

                            android:layout_below="@+id/text_2"

                            android:text="@string/variable_3"/>




                        <TextView
                            android:id="@+id/text_4"
                            android:gravity="center"
                            android:layout_marginTop="10dp"
                            android:fontFamily="sans-serif"
                            android:textSize="20sp"
                            android:background="@color/dim_gray"
                            android:textColor="@color/black"

                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textStyle="bold"
                            android:layout_below="@+id/text_3"

                            android:text="@string/variable_4"/>


                        <TextView
                            android:id="@+id/text_5"
                            android:gravity="left"
                            android:layout_marginTop="7dp"
                            android:paddingLeft="8dp"
                            android:fontFamily="sans-serif"
                            android:textSize="20sp"
                            android:textColor="@color/black"

                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"

                            android:layout_below="@+id/text_4"

                            android:text="@string/variable_5"/>

                        <TextView
                            android:id="@+id/text_6"
                            android:gravity="center"
                            android:layout_marginTop="10dp"
                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                            android:textColor="@color/colorAccent"

                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textStyle="bold"
                            android:layout_below="@+id/text_5"

                            android:text="@string/variable_6"/>

                        <TextView
                            android:id="@+id/text_7"
                            android:gravity="left"
                            android:layout_marginTop="7dp"
                            android:paddingLeft="8dp"
                            android:fontFamily="sans-serif"
                            android:textSize="20sp"
                            android:textColor="@color/black"

                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"

                            android:layout_below="@+id/text_6"

                            android:text="@string/variable_7"/>


                        <TextView
                            android:id="@+id/text_8"
                            android:gravity="center"
                            android:layout_marginTop="10dp"
                            android:fontFamily="sans-serif"
                            android:textSize="20sp"
                            android:background="@color/dim_gray"
                            android:textColor="@color/black"

                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textStyle="bold"
                            android:layout_below="@+id/text_7"

                            android:text="@string/variable_8"/>

                        <TextView
                            android:id="@+id/text_9"
                            android:gravity="left"
                            android:layout_marginTop="7dp"
                            android:paddingLeft="8dp"
                            android:fontFamily="sans-serif"
                            android:textSize="20sp"
                            android:textColor="@color/black"

                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"

                            android:layout_below="@+id/text_8"

                            android:text="@string/variable_9"/>
                        <TextView
                            android:id="@+id/text_10"
                            android:gravity="center"
                            android:layout_marginTop="10dp"
                            android:fontFamily="sans-serif"
                            android:textSize="20sp"
                            android:background="@color/dim_gray"
                            android:textColor="@color/black"

                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textStyle="bold"
                            android:layout_below="@+id/text_9"

                            android:text="@string/variable_10"/>
                        <TextView
                            android:id="@+id/text_11"
                            android:gravity="center"
                            android:layout_marginTop="10dp"
                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                            android:textColor="@color/colorAccent"

                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textStyle="bold"
                            android:layout_below="@+id/text_10"

                            android:text="@string/variable_11"/>

                        <TextView
                            android:id="@+id/text_12"
                            android:gravity="left"
                            android:layout_marginTop="7dp"
                            android:paddingLeft="8dp"
                            android:fontFamily="sans-serif"
                            android:textSize="20sp"

                            android:textColor="@color/black"

                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"

                            android:layout_below="@+id/text_11"

                            android:text="@string/variable_12"/>



                        <TextView
                            android:id="@+id/text_13"
                            android:gravity="center"
                            android:layout_marginTop="10dp"
                            android:fontFamily="sans-serif"
                            android:textSize="20sp"
                            android:background="@color/dim_gray"
                            android:textColor="@color/black"

                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textStyle="bold"
                            android:layout_below="@+id/text_12"

                            android:text="@string/variable_13"/>

                        <TextView
                            android:id="@+id/text_14"
                            android:gravity="left"
                            android:layout_marginTop="7dp"
                            android:paddingLeft="8dp"
                            android:fontFamily="sans-serif"
                            android:textSize="20sp"

                            android:textColor="@color/black"

                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"

                            android:layout_below="@+id/text_13"

                            android:text="@string/variable_14"/>

                        <TextView
                            android:id="@+id/text_15"
                            android:gravity="center"
                            android:layout_marginTop="10dp"
                            android:fontFamily="sans-serif"
                            android:textSize="20sp"
                            android:background="@color/dim_gray"
                            android:textColor="@color/black"

                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textStyle="bold"
                            android:layout_below="@+id/text_14"

                            android:text="@string/variable_15"/>

                        <TextView
                            android:id="@+id/text_16"
                            android:gravity="center"
                            android:layout_marginTop="10dp"
                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                            android:textColor="@color/colorAccent"

                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textStyle="bold"
                            android:layout_below="@+id/text_15"

                            android:text="@string/variable_16"/>

                        <TextView
                            android:id="@+id/text_17"
                            android:gravity="left"
                            android:layout_marginTop="7dp"
                            android:paddingLeft="8dp"
                            android:fontFamily="sans-serif"
                            android:textSize="20sp"

                            android:textColor="@color/black"

                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"

                            android:layout_below="@+id/text_16"

                            android:text="@string/variable_17"/>



                        <TextView
                            android:id="@+id/text_18"
                            android:gravity="center"
                            android:layout_marginTop="10dp"
                            android:fontFamily="sans-serif"
                            android:textSize="20sp"
                            android:background="@color/dim_gray"
                            android:textColor="@color/black"

                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textStyle="bold"
                            android:layout_below="@+id/text_17"

                            android:text="@string/variable_18"/>

                        <TextView
                            android:id="@+id/text_19"
                            android:gravity="left"
                            android:layout_marginTop="7dp"
                            android:paddingLeft="8dp"
                            android:fontFamily="sans-serif"
                            android:textSize="20sp"

                            android:textColor="@color/black"

                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"

                            android:layout_below="@+id/text_18"

                            android:text="@string/variable_19"/>

                        <TextView
                            android:id="@+id/text_20"
                            android:gravity="center"
                            android:layout_marginTop="10dp"
                            android:fontFamily="sans-serif"
                            android:textSize="20sp"
                            android:background="@color/dim_gray"
                            android:textColor="@color/black"

                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textStyle="bold"
                            android:layout_below="@+id/text_19"

                            android:text="@string/variable_20"/>

                        <TextView
                            android:id="@+id/text_21"
                            android:gravity="left"
                            android:layout_marginTop="7dp"
                            android:paddingLeft="8dp"
                            android:fontFamily="sans-serif"
                            android:textSize="20sp"

                            android:textColor="@color/black"

                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"

                            android:layout_below="@+id/text_20"

                            android:text="@string/variable_22"/>



                        <View
                            android:layout_below="@id/text_13"
                            android:layout_width="match_parent"
                            android:layout_marginTop="20dp"
                            android:layout_height="40dp" />

                    </RelativeLayout>
                </android.support.v7.widget.CardView>

            </LinearLayout>


        </android.support.v4.widget.NestedScrollView>

    </LinearLayout>

    <android.support.design.widget.BottomNavigationView
        android:layout_width="match_parent"
        android:id="@+id/nav_tutorial_variables"



        android:layout_height="56dp"

        app:itemBackground="@color/colorPrimary"
        app:itemIconTint="@color/nav_items_color"
        app:itemTextColor="@color/nav_items_color"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        app:menu="@menu/tutorial_items" />


</RelativeLayout>