<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".SettingFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="590dp"
        android:layout_marginTop="30dp"
        android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:id="@+id/CardViewContact"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_margin="5dp"
        android:clickable="true"

        app:cardCornerRadius="4dp">

        <TextView
            android:id="@+id/textViewContact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:clickable="true"

            android:padding="2dp"
            android:text="@string/contact"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#4d4d4d"
            android:textStyle="bold" />


    </android.support.v7.widget.CardView>





        <android.support.v7.widget.CardView
            android:id="@+id/CardViewHelp"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_margin="5dp"
            android:clickable="true"

            app:cardCornerRadius="4dp">

            <TextView
                android:id="@+id/textViewHelp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:clickable="true"

                android:padding="2dp"
                android:text="@string/Help"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#4d4d4d"
                android:textStyle="bold" />


        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/CardViewTerms"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_margin="5dp"
            android:clickable="true"

            app:cardCornerRadius="4dp">

            <TextView
                android:id="@+id/textViewTerms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:clickable="true"
                android:padding="2dp"
                android:text="@string/policy"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#4d4d4d"
                android:textStyle="bold" />


        </android.support.v7.widget.CardView>



        <android.support.v7.widget.CardView
            android:id="@+id/CardViewExit"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_margin="5dp"
            android:clickable="true"

            app:cardCornerRadius="4dp">

            <TextView
                android:id="@+id/textViewExit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:clickable="true"

                android:padding="2dp"
                android:text="@string/exit"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#4d4d4d"
                android:textStyle="bold" />


        </android.support.v7.widget.CardView>

    </LinearLayout>

</FrameLayout>